--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   &__blue {
-    padding: 12px 33px;    
+    padding: 12px 33px; //nije univerzalno   
     background-color: $color-blue;
     border: none;
   }
