--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
   width: 100%;
-  height: 1167px;  
+  height: 1167px;
 
   &__container {
-    width: 100%;    
+    width: 100%;
     padding: 50px $padding-lr;
 
     width: 100%;
@@ -14,6 +14,7 @@
   &__logo-box {
     width: 100%;
     margin-bottom: 50px;
+    
     img {
       height: 35px;
     }
@@ -30,7 +31,6 @@
   &__list-social {
     width: 100%;
     margin-bottom: 50px;
-    border: 1px solid red;
 
     display: inline-flex;
     justify-content: flex-start;
@@ -38,21 +38,23 @@
     gap: 15px;
   }
 
-  &__list-item {
+  &__link-social {
+    display: block;
     width: 56px;
     height: 56px;
     border-radius: 20px;
-    background-color: $color-grey-dark;
-  }
 
-  &__link-social {
-    width: inherit;
-    height: inherit;
+    background-image: url(./assets/images/1572624691255@3x.png) ;
+    background-size: cover;
+    border: 1px solid rgb(255, 238, 0);
+
     display: flex;
     justify-content: center;
     align-items: center;
   }
+}
 
+.footer {
   &__heading-title {
     margin-bottom: 24px;
   }
@@ -62,11 +64,17 @@
     margin-bottom: 50px;
   }
 
-  &__navigation-list,
+  &__nav-list,
   &__contact-list {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 10px;  
+  }
+  
+  &__contact-list {
+    .contact-info-link {
+      margin-bottom: 10px;
+    }
   }
 }
 
