--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 1167px;
+  overflow: hidden;  
 
   &__container {
     width: 100%;
@@ -14,7 +14,7 @@
   &__logo-box {
     width: 100%;
     margin-bottom: 50px;
-    
+
     img {
       height: 35px;
     }
@@ -44,13 +44,18 @@
     height: 56px;
     border-radius: 20px;
 
-    background-image: url(./assets/images/1572624691255@3x.png) ;
+    background-image: url(./assets/images/1572624691255@3x.png);
     background-size: cover;
     border: 1px solid rgb(255, 238, 0);
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    i {
+      border: 1px solid rgb(255, 0, 255);
+      transform: translateX(4px);
+    }
   }
 }
 
@@ -68,9 +73,9 @@
   &__contact-list {
     display: flex;
     flex-direction: column;
-    gap: 10px;  
+    gap: 10px;
   }
-  
+
   &__contact-list {
     .contact-info-link {
       margin-bottom: 10px;
