--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,12 @@
 .header {
   width: 100%;
-  height: 100px;
+  height: 100px;  
 
   &__container {
     width: 100%;
     height: inherit;
     padding: 50px $padding-lr;
-    background-color: $color_black; 
+    background-color: transparent; 
     
     display: flex;
     justify-content: space-between;
