--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -31,3 +31,10 @@ li {
 a {
   cursor: pointer;
 }
+
+.home-img {
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: rgba(17, 17, 26, 0.4) 0px 8px 24px,
+    rgba(17, 17, 26, 0.2) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+}
