--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -15,7 +15,7 @@ li {
 
 .paragraph-text-light {
   color: $color-secondary-text;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .paragraph-text-italic {
@@ -95,7 +95,6 @@ li {
 .services {
   &__paragraph-text-light {
     color: $color-secondary-text-light-1;
-    font-weight: 500;
   }
 
   .card {
@@ -151,6 +150,7 @@ li {
 
   &__paragraph-text-light {
     padding-right: 50px;
+    font-weight: 600;
   }
 
   .arrow-btn--right {
@@ -184,7 +184,6 @@ li {
   &__paragraph-text-light {
     font-size: 16px;
     line-height: 1.38;
-    font-weight: 900;
   }
 }
 
@@ -253,4 +252,30 @@ li {
     font-size: 20px;
     color: $color-white;
   }
+}
+
+@media screen and (min-width: 1024px) {
+  .paragraph-text,
+  .paragraph-text-light {
+    font-size: 20px;
+  }
+
+  .title-secondary {
+    font-size: 90px;
+  }
+
+  .heading-title {
+    font-size: 24px;
+  }
+
+  .hero {
+    h1 {
+      font-size: 80px;
+    }
+
+    &__text {
+      font-size: 22px;
+      line-height: 1.55;
+    }
+  }  
 }
