--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,10 @@ li {
   .paragraph-text,
 .paragraph-text-light {
     font-size: 20px;
+    font-weight: 600;
   }
-  .title-secondary {
+  .title-secondary,
+.title-shadow::before {
     font-size: 90px;
   }
   .heading-title {
@@ -272,6 +274,25 @@ li {
   .hero__text {
     font-size: 22px;
     line-height: 1.55;
+  }
+  .services .card {
+    font-weight: 500;
+  }
+  .services .card__heading-subtitle-span {
+    font-size: 18px;
+  }
+  .services .card__heading-title {
+    font-size: 24px;
+  }
+  .experience__title-secondary {
+    font-size: 60px;
+  }
+  .info__title-secondary,
+.info .title-shadow::before {
+    font-size: 48px;
+  }
+  .footer__heading-title {
+    font-size: 20px;
   }
 }
 .button {
@@ -322,16 +343,13 @@ li {
   width: 56px;
   height: 56px;
   border-radius: 20px;
-  background-image: url(./assets/images/1572624691255@3x.png);
-  background-size: cover;
-  border: 1px solid rgb(255, 238, 0);
+  background-color: #393939;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .footer__link-social i {
-  border: 1px solid rgb(255, 0, 255);
-  transform: translateX(2px);
+  transform: translateX(4px);
 }
 
 .footer__heading-title {
@@ -359,6 +377,23 @@ li {
   align-items: center;
 }
 
+/* breakpoint 1024px */
+@media screen and (min-width: 1024px) {
+  .footer {
+    padding-top: 100px;
+  }
+  .footer__flex-wrap {
+    display: flex;
+  }
+  .footer__social {
+    flex: 0 1 60%;
+  }
+  .footer__content {
+    flex: 0 1 40%;
+    display: flex;
+    justify-content: space-between;
+  }
+}
 .header {
   width: 100%;
   height: 100px;
@@ -559,6 +594,9 @@ li {
 .testimonials {
   padding: 50px 16px;
 }
+.testimonials .testimonials-desktop {
+  display: none;
+}
 .testimonials__title-secondary {
   margin-bottom: 24px;
 }
@@ -574,10 +612,10 @@ li {
 .testimonials .carousel__list {
   overflow: hidden;
   position: relative;
+  margin-bottom: 32px;
   display: flex;
   align-items: flex-end;
   gap: 20px;
-  margin-bottom: 32px;
 }
 .testimonials .carousel__list img {
   width: 80px;
@@ -604,7 +642,7 @@ li {
   background-color: transparent;
 }
 
-.hire-us {
+.hire-us .projects {
   padding: 0 16px;
 }
 .hire-us .title-shadow {
@@ -685,6 +723,9 @@ li {
 .gallery {
   padding: 100px 16px;
 }
+.gallery .gallery-desktop {
+  display: none;
+}
 .gallery__image {
   width: 100%;
 }
@@ -696,19 +737,23 @@ li {
 }
 
 .experience__container {
-  padding: 100px 0;
+  padding-top: 100px;
+  padding-bottom: 60px;
+}
+.experience .section-title {
+  width: 50%;
 }
 .experience__text-box {
   padding-left: 16px;
 }
 .experience__marquee {
+  padding: 10px;
   margin-bottom: 60px;
+  overflow-x: hidden;
 }
 .experience__marquee-content {
-  height: 32px;
   white-space: nowrap;
   opacity: 0.63;
-  overflow: hidden;
 }
 .experience__marquee-content--first, .experience__marquee-content--third {
   display: flex;
@@ -719,6 +764,10 @@ li {
   display: flex;
   flex-direction: row-reverse;
   gap: 40px;
+}
+.experience__marquee-content .tool {
+  display: inline-block;
+  height: 32px;
 }
 .experience .tool {
   display: inline-block;
@@ -794,7 +843,7 @@ li {
 .about,
 .services,
 .testimonials,
-.hire-us,
+.projects,
 .positions,
 .gallery,
 .info,
@@ -827,10 +876,12 @@ li {
   }
   .positions__card {
     width: 100%;
+    margin-bottom: 32px;
+    padding: 50px 40px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 30px;
+    gap: 10px;
   }
   .positions__heading-title {
     flex: 0 1 75%;
@@ -864,8 +915,16 @@ li {
 }
 /* breakpoint 1024px */
 @media screen and (min-width: 1024px) {
+  .campanies__image {
+    flex: 0 1 20%;
+    transform: scale(0.7);
+  }
   .about .text-wrapper {
+    width: 100%;
     margin-bottom: 100px;
+  }
+  .about__image {
+    width: 100%;
   }
   .about__image .home-img {
     object-fit: cover;
@@ -874,27 +933,181 @@ li {
     display: block;
     padding-bottom: 100px;
     width: 80%;
-    border: 1px solid blueviolet;
   }
   .about__image--second {
     width: 512px;
-    border: 1px solid blueviolet;
+    display: flex;
+    align-items: center;
   }
   .about__text-box {
-    border: 1px solid rgb(43, 226, 52);
     display: flex;
-    flex-direction: row;
     gap: 50px;
   }
   .about .section-title {
-    border: 1px solid rgb(43, 226, 52);
     flex: 0 1 25%;
   }
   .about__text-content {
     flex: 0 1 60%;
   }
-  .about__text-content:last-child {
-    padding-top: 50px;
+  .about__text-content--first {
+    display: flex;
+    align-items: flex-end;
+  }
+  .about__text-content--second {
+    display: flex;
+    flex-direction: column;
+  }
+  .services {
+    width: 100%;
+    padding-bottom: 100px;
+  }
+  .services__text {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .services__text-box {
+    flex: 0 1 50%;
+  }
+  .services .card-box {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  .services .card {
+    flex: 0 1 33.333%;
+  }
+  .services .card__heading-subtitle {
+    height: 50px;
+    margin-bottom: 10px;
+  }
+  .services .card__heading-title {
+    height: 120px;
+    margin-bottom: 10px;
+  }
+  .testimonials {
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgb(0, 195, 255);
+  }
+  .testimonials .testimonials-desktop {
+    display: block;
+  }
+  .testimonials .testimonials-mobile {
+    display: none;
+  }
+  .testimonials__container {
+    border: 1px solid rgb(0, 255, 98);
+  }
+  .testimonials__paragraph-text-light {
+    width: 40%;
+  }
+  .testimonials__carousel {
+    height: 500px;
+    border: 1px solid rgb(255, 0, 242);
+  }
+  .testimonials .carousel-inner {
+    border: 1px solid rgb(143, 129, 64);
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .testimonials .carousel__list, .testimonials .carousel__item-content {
+    flex: 0 1 50%;
+    position: relative;
+    border: 1px solid red;
+  }
+  .testimonials .carousel .carousel__quote {
+    width: 127px;
+    height: 105;
+  }
+  .testimonials .carousel .carousel__quote--open {
+    position: absolute;
+    top: -40px;
+  }
+  .testimonials .carousel .carousel__quote--close {
+    position: absolute;
+    right: 0;
+  }
+  .hire-us {
+    margin: 0;
+    padding-bottom: 80px;
+  }
+  .hire-us .title-shadow::before {
+    top: -30px;
+  }
+  .hire-us__paragraph-text-light {
+    width: 50%;
+  }
+  .hire-us .button__blue {
+    display: none;
+  }
+  .positions {
+    margin-top: -80px;
+  }
+  .positions__link {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .gallery {
+    padding: 120px 55px 0 77px;
+  }
+  .gallery .gallery-mobile {
+    display: none;
+  }
+  .gallery .gallery-desktop {
+    display: block;
+  }
+  .gallery__container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+  .gallery__grid-wrap {
+    flex: 0 1 33%;
+  }
+  .gallery__grid-wrap--first, .gallery__grid-wrap--third {
+    transform: translateY(-100px);
+  }
+  .gallery__grid-wrap--first {
+    padding-right: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .gallery__grid-wrap--second img {
+    height: 430px;
+  }
+  .gallery__grid-wrap--third {
+    padding-left: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+  }
+  .gallery__grid-wrap img {
+    width: 100%;
+  }
+  .experience {
+    padding-bottom: 0;
+  }
+  .experience__marquee:nth-child(3), .experience__marquee:nth-child(4) {
+    display: none;
+  }
+  .experience .section-title {
+    width: 100%;
+    text-align: center;
+  }
+  .info__container {
+    padding-top: 140px;
+  }
+  .info img {
+    width: 470px;
+    left: 30%;
   }
 }
 /* breakpoint 1366px */
