--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -6,7 +6,7 @@
   .about,
   .services,
   .testimonials,
-  .hire-us,
+  .projects,
   .positions,
   .gallery,
   .info,
@@ -52,10 +52,13 @@
 
     &__card {
       width: 100%;
+      margin-bottom: 32px;
+      padding: 50px 40px;
+
       display: flex;
       flex-direction: row;
       align-items: center;
-      gap: 30px;
+      gap: 10px;
     }
 
     &__heading-title {
@@ -66,6 +69,7 @@
       flex: 0 1 25%;
     }
   }
+
   .info {
     & .title-shadow::before {
       content: "Are you ready?";
@@ -100,12 +104,22 @@
 /* breakpoint 1024px */
 
 @media screen and (min-width: 1024px) {
+  .campanies {
+    &__image {
+      flex: 0 1 20%;
+      transform: scale(0.7);
+    }
+  }
+
   .about {
     .text-wrapper {
+      width: 100%;
       margin-bottom: 100px;
     }
 
     &__image {
+      width: 100%;
+
       .home-img {
         object-fit: cover;
       }
@@ -114,32 +128,246 @@
         display: block;
         padding-bottom: 100px;
         width: 80%;
-        border: 1px solid blueviolet;
       }
 
       &--second {
         width: 512px;
-        border: 1px solid blueviolet;
+
+        display: flex;
+        align-items: center;
       }
     }
 
     &__text-box {
-      border: 1px solid rgb(43, 226, 52);
+      //overflow: hidden;
+
       display: flex;
-      flex-direction: row;
       gap: 50px;
     }
 
     .section-title {
-      border: 1px solid rgb(43, 226, 52);
       flex: 0 1 25%;
     }
 
     &__text-content {
       flex: 0 1 60%;
-      &:last-child {
-        padding-top: 50px;
+
+      &--first {
+        display: flex;
+        align-items: flex-end;
       }
+
+      &--second {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+
+  .services {
+    width: 100%;
+    padding-bottom: 100px;
+
+    &__text {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    &__text-box {
+      flex: 0 1 50%;
+    }
+
+    .card-box {
+      margin-top: 60px;
+
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      gap: 20px;
+    }
+
+    .card {
+      flex: 0 1 33.333%;
+
+      &__heading-subtitle {
+        height: 50px;
+        margin-bottom: 10px;
+      }
+
+      &__heading-title {
+        height: 120px;
+        margin-bottom: 10px;
+      }
+    }
+  }
+
+  .testimonials {
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgb(0, 195, 255);
+    .testimonials-desktop {
+      display: block;
+    }
+    .testimonials-mobile {
+      display: none;
+    }
+
+    &__container {
+      border: 1px solid rgb(0, 255, 98);
+    }
+
+    &__paragraph-text-light {
+      width: 40%;
+    }
+
+    &__carousel {
+      height: 500px;
+      border: 1px solid rgb(255, 0, 242);
+    }
+
+    .carousel {
+      &-inner {
+        border: 1px solid rgb(143, 129, 64);
+        width: 100%;
+        height: 500px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      &__list,
+      &__item-content {
+        flex: 0 1 50%;
+        position: relative;
+        border: 1px solid red;
+
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: space-between;
+        // align-items: flex-start;
+      }
+
+      .carousel__quote {
+        width: 127px;
+        height: 105;
+
+        &--open {
+          position: absolute;
+          top: -40px;
+        }
+
+        &--close {
+          position: absolute;
+          right: 0;
+        }
+      }
+
+      // &__item-box{
+      //   position: absolute;
+      //   top: 100px;
+      // }
+    }
+  }
+
+  .hire-us {
+    margin: 0;
+    padding-bottom: 80px;
+
+    .title-shadow::before {
+      top: -30px;
+    }
+
+    &__paragraph-text-light {
+      width: 50%;
+    }
+
+    .button__blue {
+      display: none;
+    }
+  }
+
+  .positions {
+    margin-top: -80px;
+
+    &__link {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+
+  .gallery {
+    .gallery-mobile {
+      display: none;
+    }
+    .gallery-desktop {
+      display: block;
+    }
+    padding: 120px 55px 0 77px;
+
+    &__container {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+    }
+
+    &__grid-wrap {
+      flex: 0 1 33%;
+
+      &--first,
+      &--third {
+        transform: translateY(-100px);
+      }
+
+      &--first {
+        padding-right: 60px;
+
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+      }
+
+      &--second {
+        img {
+          height: 430px;
+        }
+      }
+
+      &--third {
+        padding-left: 60px;
+
+        display: flex;
+        flex-direction: column;
+        gap: 100px;
+      }
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .experience {
+    &__marquee:nth-child(3),
+    &__marquee:nth-child(4) {
+      display: none;
+    }
+    padding-bottom: 0;
+    .section-title {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  .info {
+    &__container {
+      padding-top: 140px;
+    }
+
+    img {
+      width: 470px;
+      left: 30%;
     }
   }
 }
